--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "bootstrap-icons": "^1.5.0",
     "next": "^11.1.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-placeholder": "^4.1.0"
+  },
+  "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
