--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-placeholder": "^4.1.0"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
