--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap-icons": "^1.5.0",
-    "next": "^11.1.2",
+    "next": "^12.1.6",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-placeholder": "^4.1.0"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
