--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-placeholder": "^4.1.0"
+    "react-placeholder": "^4.1.0",
+    "express": "4.17.1",
+    "redis": "3.0.2"
   },
   "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
